argo-apps/argocd/cmp.yaml
apiVersion: argoproj.io/v1alpha1
kind: ConfigManagementPlugin
metadata:
  name: kustomize-build-with-helm-and-envsubst
spec:
  generate:
    command: ["sh", "-c"]
    args: ["kustomize build --enable-helm | envsubst"]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: argocd-cmp-kustomize-build-with-helm-and-envsubst
  namespace: argocd
data:
  kustomize-build-with-helm-and-envsubst.yaml: |
    
    apiVersion: argoproj.io/v1alpha1
    kind: ConfigManagementPlugin
    metadata:
      name: kustomize-build-with-helm-and-envsubst
    spec:
      generate:
        command: ["sh", "-c"]
        args: ["kustomize build --enable-helm | envsubst"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      initContainers:
      - name: install-envsubst
        image: tbalza/envsubst:latest # alpine:latest
        command: ["/bin/sh", "-c"]
        args: ["apk --no-cache add gettext; cp /usr/bin/envsubst /custom-bin/envsubst"]
        volumeMounts:
        - name: custom-bin
          mountPath: /custom-bin
      containers:
      - name: argocd-repo-server
        image: quay.io/argoproj/argocd:v2.7.11
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        env:
          - name: PATH
            value: "/tmp:${PATH}" # /usr/local/bin is not mounting, possibly due to permissions.
        volumeMounts:
          - mountPath: /tmp # /usr/local/bin
            name: custom-bin
            subPath: envsubst
          - mountPath: /var/run/argocd
            name: var-files
          - mountPath: /home/argocd/cmp-server/plugins
            name: plugins
          - mountPath: /home/argocd/cmp-server/config/plugin.yaml
            subPath: kustomize-build-with-helm-and-envsubst.yaml
            name: argocd-cmp-kustomize-build-with-helm-and-envsubst
          - mountPath: /tmp
            name: cmp-tmp
      volumes:
      - name: custom-bin
        emptyDir: {}
      - name: var-files
        emptyDir: {}
      - name: plugins
        emptyDir: {}
      - name: argocd-cmp-kustomize-build-with-helm-and-envsubst
        configMap:
          name: kustomize-build-with-helm-and-envsubst
      - name: cmp-tmp
        emptyDir: {}
