argo-apps/argocd/ingress-kustomize-false.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: argo-cd
      meta.helm.sh/release-namespace: argocd
    creationTimestamp: "2024-06-07T20:48:01Z"
    generation: 1
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argo-cd
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/part-of: argocd
      app.kubernetes.io/version: v2.10.7
      helm.sh/chart: argo-cd-6.7.14
    name: argo-cd-argocd-server
    namespace: argocd
    resourceVersion: "58818"
    uid: 4fd2a14a-64b3-4e8b-9500-2ec7c912b9d3
  spec:
    rules:
    - host: argocd.tbalza.net
      http:
        paths:
        - backend:
            service:
              name: argo-cd-argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
