argo-apps/argocd/ingress-what.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/conditions.argo-cd-argocd-server-grpc: |
        [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
      alb.ingress.kubernetes.io/group.name: argo-cd-cluster
      alb.ingress.kubernetes.io/group.order: "1"
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/ssl-redirect: "443"
      alb.ingress.kubernetes.io/target-type: ip
      external-dns.alpha.kubernetes.io/hostname: argocd.tbalza.net
      meta.helm.sh/release-name: argo-cd
      meta.helm.sh/release-namespace: argocd
    creationTimestamp: "2024-06-07T17:56:58Z"
    finalizers:
    - group.ingress.k8s.aws/argo-cd-cluster
    generation: 1
    labels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argo-cd
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/part-of: argocd
      app.kubernetes.io/version: v2.10.7
      argocd.argoproj.io/instance: argocd
      helm.sh/chart: argo-cd-6.7.14
    name: argo-cd-argocd-server
    namespace: argocd
    resourceVersion: "46744"
    uid: 4a3b8979-c92a-4af7-889d-71de1aedb5af
  spec:
    ingressClassName: alb
    rules:
    - host: argocd.tbalza.net
      http:
        paths:
        - backend:
            service:
              name: argo-cd-argocd-server-grpc
              port:
                number: 80
          path: /
          pathType: Prefix
        - backend:
            service:
              name: argo-cd-argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: k8s-argocdcluster-5a9eface86-96093700.us-east-1.elb.amazonaws.com
kind: List
metadata:
  resourceVersion: ""
